day3/nfs-vol-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nfs-vol-pod
  labels:
    nfspod: tak
spec:
  nodeName: worker1
  volumes:
    - name: storage
      persistentVolumeClaim:
        claimName: nfs-pvc
  containers:
    - name: task-pv-container
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: storage
